--- a/test/static/context.html
+++ b/test/static/context.html
@@ -15,7 +15,7 @@ Reloaded before every execution run.
        to have already been created so they can insert their magic into it. For example, if loaded
        before body, Angular Scenario test framework fails to find the body and crashes and burns in
        an epic manner. -->
-  <script src="context.js"></script>
+  <script src="/context.js"></script>
   <script type="text/javascript">
     // Configure our Karma and set up bindings
     %CLIENT_CONFIG%
