--- a/test/static/debug.html
+++ b/test/static/debug.html
@@ -13,14 +13,17 @@ just for immediate execution, without reporting to Karma server.
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 </head>
 <body>
-  <input type="text" id="ko_keyboard">
+  <div class="container">
+    <h1>Ghost Keyboard Debug</h1>
+    <input type="text" id="debug_input">
+  </div>
 
   <!-- The scripts need to be at the end of body, so that some test running frameworks
    (Angular Scenario, for example) need the body to be loaded so that it can insert its magic
    into it. If it is before body, then it fails to find the body and crashes and burns in an epic
    manner. -->
-  <script src="context.js"></script>
-  <script src="debug.js"></script>
+  <script src="/context.js"></script>
+  <script src="/debug.js"></script>
   <script type="text/javascript">
     // Configure our Karma
     %CLIENT_CONFIG%
