--- a/test/static/debug.html
+++ b/test/static/debug.html
@@ -11,11 +11,33 @@ just for immediate execution, without reporting to Karma server.
   <link href="favicon.ico" rel="icon" type="image/x-icon" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <style>
+    .form-control {
+      display: block;
+      width: 100%;
+      height: calc(1.5em + .75rem + 2px);
+      padding: .375rem .75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #495057;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      border-radius: .25rem;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>Ghost Keyboard Debug</h1>
-    <input type="text" id="debug_input">
+    <div class="container">
+      <div class="form-group">
+        <label for="ko_input">Korean Keyboard</label>
+        <input type="text" class="form-control" id="ko_input">
+      </div>
+    </div>
   </div>
 
   <!-- The scripts need to be at the end of body, so that some test running frameworks
