--- a/test/static/debug.html
+++ b/test/static/debug.html
@@ -40,10 +40,12 @@ just for immediate execution, without reporting to Karma server.
         <input type="text" class="form-control" id="en_input">
       </div>
       <div class="form-group">
+        <label for="ko_input">English Keyboard (Pattern)</label>
+        <input type="text" class="form-control" id="en_pattern_input">
+      </div>
+      <div class="form-group">
         <label for="ko_input">Korean Keyboard</label>
-        <input type="text" class="form-control" id="ko_input"
-        autocomplete="off"
-        autocorrect="off">
+        <input type="text" class="form-control" id="ko_input">
       </div>
     </div>
   </div>
