--- a/test/static/debug.html
+++ b/test/static/debug.html
@@ -40,7 +40,7 @@ just for immediate execution, without reporting to Karma server.
         <input type="text" class="form-control" id="en_input">
       </div>
       <div class="form-group">
-        <label for="ko_input">English Keyboard (Pattern)</label>
+        <label for="en_pattern_input">English Keyboard (Pattern)</label>
         <input type="text" class="form-control" id="en_pattern_input">
       </div>
       <div class="form-group">
